--- a/index.html
+++ b/index.html
@@ -1,5 +1,14 @@
 <html>
   <body>
-    <h1>My homework</h1>
+    <div class="banner">
+      <div class="banner_content">
+      <div class="banner_text">
+        <strong> reminde: </strong> WELCOME TO THE GAGAN'S CAKES 😋.
+        <button class="banner_close" type="button">
+          <span class="material-icons-outlined">
+            cancel
+            </span>
+        </button>
+    </div>
   </body>
 </html>
