--- a/index.html
+++ b/index.html
@@ -3,12 +3,18 @@
     <div class="banner">
       <div class="banner_content">
       <div class="banner_text">
-        <strong> reminde: </strong> WELCOME TO THE GAGAN'S CAKES 😋.
+        <strong> WELCOME: </strong>  TO THE GAGAN'S CAKES 😋.
         <button class="banner_close" type="button">
           <span class="material-icons-outlined">
             cancel
             </span>
         </button>
     </div>
+    <style>
+      html,
+      body{
+        margin:0;
+      }
+    </style>
   </body>
 </html>
