--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
       body{
         margin:0;
       }
+
+      .banner{
+        background-color: color-mix(in srgb, #ff00c8 30%, #ff88e5 30%);
+      }
+
+      .baner_content{
+        max-width: 1000px;
+      }
     </style>
   </body>
 </html>
