--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
       }
 
       .baner_content{
-        max-width: 1000px;
+        padding: 16px;
+        max-width: 500000px;
+        margin: 0 auto;
+        display: flex;
+        align-items: center;
       }
     </style>
   </body>
