--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
             </span>
         </button>
     </div>
+    <head>
+      ‹meta charset="UTF-8">
+      ‹meta name="viewport" content="width=device-width, initial-scale=1.0">
+‹title>Web Page Banner</title>
+<1ink href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stvlesheet"> 
     <style>
       html,
       body{
@@ -28,5 +33,6 @@
         align-items: center;
       }
     </style>
+    </head>
   </body>
 </html>
