--- a/index.html
+++ b/index.html
@@ -1,38 +1,41 @@
-<html>
-  <body>
-    <div class="banner">
-      <div class="banner_content">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Web Page Banner</title>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <style>
+   html,
+body {
+margin: 07;
+}
+•banner{
+   background: I#c800ff;
+  }
+  .banner_content {
+padding: 16px;
+max-width: 500px;
+margin: 0 auto;
+text-align: center;
+  }
+  .ex2{
+    font-size: 40px;
+  }
+
+  </style>
+</head>
+<body>
+  <div class="banner">
+    <div class="banner_content">
       <div class="banner_text">
-        <strong> WELCOME: </strong>  TO THE GAGAN'S CAKES 😋.
-        <button class="banner_close" type="button">
-          <span class="material-icons-outlined">
-            cancel
-            </span>
-        </button>
+        <h1 class="ex2">WELCOME TO THE GAGAN CAKE'S</h1>
+      </div>
+      <button class="banner_close" type="button">
+        <span class="material-icons">close</span>
+      </button>
     </div>
-    <head>
-      ‹meta charset="UTF-8">
-      ‹meta name="viewport" content="width=device-width, initial-scale=1.0">
-‹title>Web Page Banner</title>
-<1ink href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stvlesheet"> 
-    <style>
-      html,
-      body{
-        margin:0;
-      }
-
-      .banner{
-        background-color: color-mix(in srgb, #ff00c8 30%, #ff88e5 30%);
-      }
-
-      .baner_content{
-        padding: 16px;
-        max-width: 500000px;
-        margin: 0 auto;
-        display: flex;
-        align-items: center;
-      }
-    </style>
-    </head>
-  </body>
+  </div>
+</body>
 </html>
+
